--- a/src/Components/inicio.css
+++ b/src/Components/inicio.css
@@ -5,12 +5,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  background: linear-gradient(#016459 ,#01a895 );
 }
 
 .container-buttons {
   background-color: white;
   border-radius: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0 , 0, 0.1);
+  box-shadow: 0px 0px 14pxrgba(0, 0 , 0, 0.1);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -30,6 +31,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  box-shadow: 0 0 4px black;
 }
 .container-buttons button {
   width: 80%;
