--- a/src/Components/login.css
+++ b/src/Components/login.css
@@ -10,7 +10,7 @@
 .container-buttons {
   background-color: white;
   border-radius: 1rem;
-  box-shadow: 0 0 10px rgba(0, 0 , 0, 0.1);
+  box-shadow: 0px 0px 14px 2px rgba(0, 0, 0, 0.397);
   display: flex;
   flex-direction: column;
   justify-content: center;
