--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -14,6 +14,36 @@ main {
   justify-content: flex-start;
   align-items: center;
 }
+.menu-bar {
+  width: 40%;
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  left: -40%;
+  background-color: #01a895;
+  box-shadow: 2px 2px 4px black;
+  z-index: 1001;
+}
+.menu-bar ul {
+  margin-left: 20px;
+  list-style: none;
+}
+.nav-bar-btn {
+  position: relative;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+}
+.btn-menu-bar {
+  background: none;
+  border: none;
+}
+.btn-salir-menu {
+  border: none;
+  background: none;
+  position: absolute;
+  right: 10px;
+}
 .header-main{
  width: 100%;
  height: 100px;
@@ -132,6 +162,12 @@ footer {
   background-color: #00695c;
   color: white;
   text-align: center;
+}
+
+.enter {
+  position:absolute;
+  left: 0;
+  transition: .2s ease-in-out;
 }
 
 /* monitor */
