--- a/src/Components/main.css
+++ b/src/Components/main.css
@@ -43,6 +43,10 @@ main {
   border: none;
   padding: .5rem;
   width: 100%;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap:.5rem;
 }
 .btn-menu-bar:hover {
   background-color: #00695c;
@@ -123,57 +127,15 @@ main {
   background-color: #00695c;
   color: white;
 }
+.esp-med {
+   overflow: hidden;
+  max-height: 0;  
+  transition: max-height 0.4s ease, opacity 0.4s ease;  
+}
 
-/*-------------*/
-/*
-.container-info {
-  width: 90%;
-  flex: 1;
-  position: relative;
-  background-color: white;
-  margin: 1rem;
-  border-radius: 20px;
-  box-shadow: 0 0 10px rgba(0, 0 , 0, 0.1);
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.open {
+   max-height: 500px; 
 }
-.container-section-info {
-  width: 90%;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 1rem;
-  gap: 1rem;
-}
-.btn {
-  padding: .8rem;
-  border: none;
-  border-radius: 5px;
-  width: 90%;
-  transition: .2s ease-in-out;
-}
-.fotoPerfil {
-  position: absolute;
-  top: -50px;
-  left: 40%;
-  width: 80px;
-  height: 80px;
-  border: 2px solid green;
-  border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 2px 2px 10px black;
-}
-.fotoPerfil  img {
-  max-width: 100%;
-  height: auto;
-  object-fit: cover;
-  object-position: 0 50%;
-}
-/*
-
-/*----------------------------------------*/
 
 .container-info {
   max-width: 600px;
